[package]
name = "mehari"
version = "0.38.1"
edition = "2021"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>"]
description = "Variant effect prediction all in Rust"
license = "MIT"
repository = "https://github.com/varfish-org/mehari"
readme = "README.md"
rust-version = "1.75.0"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator", "rocksdb/jemalloc", "annonars/jemalloc"]
dhat-heap = ["dep:dhat"]  # for heap profiling with dhats
documentation = []

[package.metadata.docs.rs]
all-features = true

[lib]
name = "mehari"
path = "src/lib.rs"

[[bin]]
name = "mehari"
path = "src/main.rs"

[dependencies]
actix-web = "4.11"
annonars = "0.44.1"
anyhow = "1.0"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
bio = "3.0.0"
biocommons-bioutils = "0.1.5"
built = { version = "0.8", features = ["chrono", "semver"] }
byte-unit = "5.2"
chrono = "0.4"
clap-verbosity-flag = "3.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
derivative = "2.2"
derive_builder = { version = "0.20", features = ["clippy"] }
derive-new = "0.7.0"
enumflags2 = { version = "0.7.11", features = ["serde"] }
env_logger = "0.11"
flate2 = "1.1"
futures = "0.3"
hgvs = "0.19.1"
indexmap = { version = "2.12", features = ["serde"] }
itertools = "0.14"
jsonl = "4.0"
log = "0.4"
nom = "8.0"
nutype = { version = "0.6.2", features = ["serde"] }
once_cell = "1.21.3"
parse-display = "0.10"
pbjson = "0.8"
percent-encoding = "2.3"
procfs = "0.18"
prost = "0.14.1"
quick_cache = "0.6.18"
rand = "0.9"
rayon = "1.11.0"
rocksdb = { version = "0.24.0", features = ["multi-threaded-cf"] }
rustc-hash = "2.1.0"
seqrepo = { version = "0.10.2", features = ["cached"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.16", features = ["alloc", "macros", "indexmap_2"], default-features = false }
serde_yaml = "0.9"
strum = { version = "0.27", features = ["derive"] }
tempfile = "3"
thousands = "0.2"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
tracing = { version = "0.1", features = ["log"] }
uuid = { version = "1.18", features = ["fast-rng", "serde"] }
zstd = "0.13"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "indexmap", "openapi_extensions", "preserve_order", "yaml"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
memmap2 = "0.9.9"
serde-aux = "4.7.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[dependencies.dhat]
version = "0.3.3"
optional = true

[dependencies.noodles]
version = "0.97.0"
features = ["async", "bgzf", "core", "vcf", "bcf", "csi", "fasta", "tabix"]

[build-dependencies]
anyhow = "1.0"
built = { version = "0.8", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }
pbjson-build = "0.8.0"
prost-build = "0.14.1"

[dev-dependencies]
csv = "1.4"
hxdmp = "0.2"
insta = { version = "1.44", features = ["yaml"] }
pretty_assertions = "1.4"
rstest = "0.26"
temp_testdir = "0.2"
tracing-test = "0.2"
criterion = { version = "0.8.0", features = ["async_tokio"] }
pprof = { version = "0.15.0", features = ["flamegraph"] }

# Compile insta with full optimization.
[profile.dev.package.insta]
opt-level = 3
[profile.dev.package.similar]
opt-level = 3

[profile.release]
debug = false
lto = "fat"
codegen-units = 1

[profile.dev]
debug = true
lto = false
codegen-units = 128
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
