[workspace]
resolver = "3"
members = ["mehari"]  # do not include mehari-python here to avoid pulling in jemalloc for python bindings

# Compile insta with full optimization.
[profile.dev.package.insta]
opt-level = 3
[profile.dev.package.similar]
opt-level = 3

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.dev]
debug = true
lto = false
codegen-units = 128
opt-level = 1

[profile.profiling]
inherits = "release"
debug = true
