[package]
name = "mehari-cli"
version = "0.39.0"
edition = "2024"

[features]
default = ["jemalloc"]
jemalloc = ["mehari/jemalloc"]
dhat-heap = ["dep:dhat"]  # for heap profiling with dhats

[[bin]]
name = "mehari"
path = "src/main.rs"

[dependencies]
mehari = { path = "../mehari" }

clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
tikv-jemallocator = "0.6"
anyhow = "1.0.102"
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
log = "0.4.29"

[dependencies.dhat]
version = "0.3.3"
optional = true
