[package]
name = "mehari-plugins"
version = "0.1.0"
authors = ["Till Hartmann <till.hartmann@bih-charite.de>"]
edition = "2021"
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.81"
getset = "0.1.2"
derive_builder = "0.20.0"
derive-new = "0.7.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
extism = "1.2.0"

[[bench]]
name = "plugin_calling"
harness = false