[package]
name = "mehari-python"
version = "0.1.0"
edition = "2024"

[lib]
name = "mehari_python"
crate-type = ["cdylib"]

[dependencies]
mehari = { path = "../mehari", default-features = false }
pyo3 = { version = "0.28", features = ["extension-module"] }
pythonize = "0.28"
serde = { version = "1.0", features = ["derive"] }

[workspace]  # workaround to avoid pulling in jemalloc
