[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "mehari"
version = "0.39.0"
description = "Python bindings for mehari"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
module-name = "mehari" 
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
