[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "mehari"
version = "0.39.0"
description = "Python bindings for mehari"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
module-name = "mehari._mehari"
features = ["pyo3/extension-module"]

[tool.uv.sources]
mehari = { editable = true, path = "."}

[dependency-groups]
dev = [
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "mehari",
]
