[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "mehari"
version = "0.41.0"
description = "Python bindings for the mehari variant annotator"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Till Hartmann", email = "till.hartmann@bih-charite.de" },
]
keywords = ["bioinformatics", "genomics", "variants", "annotation", "vcf"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
]

[project.urls]
Homepage = "https://github.com/varfish-org/mehari"
Repository = "https://github.com/varfish-org/mehari.git"
Documentation = "https://github.com/varfish-org/mehari/tree/main/docs"

[tool.maturin]
module-name = "mehari._mehari"
features = ["pyo3/extension-module"]

[tool.uv.sources]
mehari = { editable = true, path = "." }

[dependency-groups]
dev = [
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "mehari",
]
